update html structure and css styling

--- a/index.html
+++ b/index.html
@@ -2,44 +2,56 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <!--link rel="stylesheet" href="reset.css"-->
   </head>
-  <header>
-    <img src="https://place-hold.it/200x70/ddd" />
-    <nav>
-      <a>Nav item 1</a>
-      <a>Nav item 2</a>
-      <a>Nav item 3</a>
-      <a>Nav item 4</a>
-    </nav>
-  </header>
   <body>
+    <header>
+      <img src="https://place-hold.it/200x70/ddd" />
+      <nav>
+        <div>Nav Item 1</div>
+        <div>Nav Item 2</div>
+        <div>Nav Item 3</div>
+        <div>Nav Item 4</div>
+      </nav>
+    </header>
     <main>
       <img src="https://place-hold.it/960x450/ddd" />
+
+      <img src="https://place-hold.it/300x375/ddd" />
+      <img src="https://place-hold.it/300x375/ddd" />
+      <img src="https://place-hold.it/300x375/ddd" />
+
+      <img src="https://place-hold.it/480x400/ddd" />
+
+      <section>
+        <h2>Featured Section Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
+          architecto saepe accusamus officia sint nihil labore. Atque amet
+          numquam eius. Architecto blanditiis cumque obcaecati excepturi error
+          minus vero accusamus voluptas nam? Odio natus, tempora officia esse
+          molestias maiores tempore itaque temporibus tenetur harum rerum, quos
+          nemo labore saepe ipsum doloribus. Rerum inventore corrupti ipsum est
+          blanditiis quibusdam quisquam velit, maxime ad voluptatibus unde amet
+          minima reprehenderit deserunt sapiente cum aut excepturi perspiciatis
+          animi deleniti consectetur. Vitae eius impedit aperiam laudantium
+          suscipit cumque aliquam laboriosam reiciendis, debitis fuga
+          dignissimos consectetur odio placeat, ut omnis magni, nesciunt eos aut
+          vel inventore? Quisquam incidunt, explicabo, neque nisi itaque
+          quibusdam voluptatem aut libero fugiat laboriosam, doloremque
+          distinctio. Temporibus unde sed a, animi incidunt, quae aspernatur
+          minus beatae quas corrupti amet eos. Quasi, enim numquam. Veritatis
+          dicta culpa ullam, labore, temporibus quod sunt quisquam molestias
+          sint quia blanditiis tenetur eum, nesciunt autem fugit? Consequuntur,
+          laborum.
+        </p>
+        <button>Call to action</button>
+      </section>
     </main>
-    <section>
-      <img src="https://place-hold.it/300x375/ddd" />
-      <img src="https://place-hold.it/300x375/ddd" />
-      <img src="https://place-hold.it/300x375/ddd" />
-    </section>
-    <article>
-      <img src="https://place-hold.it/300x375/ddd" />
-      <h2>Featured Section Heading</h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. A quo, eveniet
-        maxime quae unde consectetur excepturi tempore neque et quidem alias
-        dolores eum non. Ut doloribus harum vitae quae, soluta ratione
-        praesentium totam sed repellat iste labore dolores reprehenderit
-        voluptate pariatur recusandae ex iure voluptates! Dolore ea rerum
-        minima. Facere?
-      </p>
-      <button type="button" onclick="alert('Hello world!')">
-        Call To Action
-      </button>
-    </article>
-    <footer>Footer</footer>
+    <footer></footer>
   </body>
 </html>
