update button style

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           sint quia blanditiis tenetur eum, nesciunt autem fugit? Consequuntur,
           laborum.
         </p>
-        <button>Call to action</button>
+        <button>Call To Action</button>
       </section>
     </main>
     <footer></footer>
