--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   </head>
   <body>
     <header>
-      <img src="https://place-hold.it/200x70/ddd" />
-      <nav>
-        <div>Nav Item 1</div>
-        <div>Nav Item 2</div>
-        <div>Nav Item 3</div>
-        <div>Nav Item 4</div>
-      </nav>
+      <span>
+        <img src="https://place-hold.it/200x70/ddd" />
+        <nav>
+          <div>Nav Item 1</div>
+          <div>Nav Item 2</div>
+          <div>Nav Item 3</div>
+          <div>Nav Item 4</div>
+        </nav>
+      </span>
     </header>
     <main>
       <img src="https://place-hold.it/960x450/ddd" />
@@ -30,24 +32,53 @@
       <section>
         <h2>Featured Section Heading</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
-          architecto saepe accusamus officia sint nihil labore. Atque amet
-          numquam eius. Architecto blanditiis cumque obcaecati excepturi error
-          minus vero accusamus voluptas nam? Odio natus, tempora officia esse
-          molestias maiores tempore itaque temporibus tenetur harum rerum, quos
-          nemo labore saepe ipsum doloribus. Rerum inventore corrupti ipsum est
-          blanditiis quibusdam quisquam velit, maxime ad voluptatibus unde amet
-          minima reprehenderit deserunt sapiente cum aut excepturi perspiciatis
-          animi deleniti consectetur. Vitae eius impedit aperiam laudantium
-          suscipit cumque aliquam laboriosam reiciendis, debitis fuga
-          dignissimos consectetur odio placeat, ut omnis magni, nesciunt eos aut
-          vel inventore? Quisquam incidunt, explicabo, neque nisi itaque
-          quibusdam voluptatem aut libero fugiat laboriosam, doloremque
-          distinctio. Temporibus unde sed a, animi incidunt, quae aspernatur
-          minus beatae quas corrupti amet eos. Quasi, enim numquam. Veritatis
-          dicta culpa ullam, labore, temporibus quod sunt quisquam molestias
-          sint quia blanditiis tenetur eum, nesciunt autem fugit? Consequuntur,
-          laborum.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Perspiciatis, unde deserunt. Eligendi quae quod exercitationem
+          consectetur a, reprehenderit, corrupti repudiandae reiciendis magni
+          eaque maxime, in nostrum. Deserunt iste ipsam est in recusandae fuga
+          quo veritatis vero doloribus reprehenderit deleniti accusantium
+          laboriosam asperiores nesciunt, incidunt eaque sunt sequi odio quasi
+          nobis? Iusto placeat itaque nulla temporibus excepturi enim porro
+          asperiores ex accusantium autem alias aspernatur neque, mollitia ea at
+          nam similique, error eos eveniet ut? Ea temporibus ex modi
+          necessitatibus nostrum unde iste earum quam, explicabo sunt asperiores
+          dolor deserunt minima! Fugit iste aperiam incidunt at voluptate
+          consequatur quidem repudiandae animi dolore itaque et, voluptates
+          commodi pariatur nemo praesentium magnam quia explicabo tempora, dolor
+          accusamus sapiente aliquam autem, reiciendis iure? Ducimus commodi
+          suscipit beatae perferendis quia ut nesciunt eius repudiandae quo
+          ratione quod laborum natus consequatur, pariatur voluptatibus quasi
+          illo ipsam facere in autem voluptatum reprehenderit odio possimus?
+          Eveniet, error dolorem. Quas sequi laborum odit! Molestiae, quasi
+          beatae. Quibusdam laboriosam iusto illo tempore id aliquam fugit
+          dignissimos repellat quam consequuntur beatae, ea perspiciatis
+          sapiente modi itaque animi, harum necessitatibus, ipsa excepturi a
+          quasi nulla ipsam. Laboriosam deserunt blanditiis minima aperiam, fuga
+          similique aliquam ut obcaecati a temporibus dolor voluptatum repellat
+          eos! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Perspiciatis, unde deserunt. Eligendi quae quod exercitationem
+          consectetur a, reprehenderit, corrupti repudiandae reiciendis magni
+          eaque maxime, in nostrum. Deserunt iste ipsam est in recusandae fuga
+          quo veritatis vero doloribus reprehenderit deleniti accusantium
+          laboriosam asperiores nesciunt, incidunt eaque sunt sequi odio quasi
+          nobis? Iusto placeat itaque nulla temporibus excepturi enim porro
+          asperiores ex accusantium autem alias aspernatur neque, mollitia ea at
+          nam similique, error eos eveniet ut? Ea temporibus ex modi
+          necessitatibus nostrum unde iste earum quam, explicabo sunt asperiores
+          dolor deserunt minima! Fugit iste aperiam incidunt at voluptate
+          consequatur quidem repudiandae animi dolore itaque et, voluptates
+          commodi pariatur nemo praesentium magnam quia explicabo tempora, dolor
+          accusamus sapiente aliquam autem, reiciendis iure? Ducimus commodi
+          suscipit beatae perferendis quia ut nesciunt eius repudiandae quo
+          ratione quod laborum natus consequatur, pariatur voluptatibus quasi
+          illo ipsam facere in autem voluptatum reprehenderit odio possimus?
+          Eveniet, error dolorem. Quas sequi laborum odit! Molestiae, quasi
+          beatae. Quibusdam laboriosam iusto illo tempore id aliquam fugit
+          dignissimos repellat quam consequuntur beatae, ea perspiciatis
+          sapiente modi itaque animi, harum necessitatibus, ipsa excepturi a
+          quasi nulla ipsam. Laboriosam deserunt blanditiis minima aperiam, fuga
+          similique aliquam ut obcaecati a temporibus dolor voluptatum repellat
+          eos!
         </p>
         <button>Call To Action</button>
       </section>
