--- a/index.html
+++ b/index.html
@@ -32,57 +32,35 @@
       <section>
         <h2>Featured Section Heading</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Perspiciatis, unde deserunt. Eligendi quae quod exercitationem
-          consectetur a, reprehenderit, corrupti repudiandae reiciendis magni
-          eaque maxime, in nostrum. Deserunt iste ipsam est in recusandae fuga
-          quo veritatis vero doloribus reprehenderit deleniti accusantium
-          laboriosam asperiores nesciunt, incidunt eaque sunt sequi odio quasi
-          nobis? Iusto placeat itaque nulla temporibus excepturi enim porro
-          asperiores ex accusantium autem alias aspernatur neque, mollitia ea at
-          nam similique, error eos eveniet ut? Ea temporibus ex modi
-          necessitatibus nostrum unde iste earum quam, explicabo sunt asperiores
-          dolor deserunt minima! Fugit iste aperiam incidunt at voluptate
-          consequatur quidem repudiandae animi dolore itaque et, voluptates
-          commodi pariatur nemo praesentium magnam quia explicabo tempora, dolor
-          accusamus sapiente aliquam autem, reiciendis iure? Ducimus commodi
-          suscipit beatae perferendis quia ut nesciunt eius repudiandae quo
-          ratione quod laborum natus consequatur, pariatur voluptatibus quasi
-          illo ipsam facere in autem voluptatum reprehenderit odio possimus?
-          Eveniet, error dolorem. Quas sequi laborum odit! Molestiae, quasi
-          beatae. Quibusdam laboriosam iusto illo tempore id aliquam fugit
-          dignissimos repellat quam consequuntur beatae, ea perspiciatis
-          sapiente modi itaque animi, harum necessitatibus, ipsa excepturi a
-          quasi nulla ipsam. Laboriosam deserunt blanditiis minima aperiam, fuga
-          similique aliquam ut obcaecati a temporibus dolor voluptatum repellat
-          eos! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Perspiciatis, unde deserunt. Eligendi quae quod exercitationem
-          consectetur a, reprehenderit, corrupti repudiandae reiciendis magni
-          eaque maxime, in nostrum. Deserunt iste ipsam est in recusandae fuga
-          quo veritatis vero doloribus reprehenderit deleniti accusantium
-          laboriosam asperiores nesciunt, incidunt eaque sunt sequi odio quasi
-          nobis? Iusto placeat itaque nulla temporibus excepturi enim porro
-          asperiores ex accusantium autem alias aspernatur neque, mollitia ea at
-          nam similique, error eos eveniet ut? Ea temporibus ex modi
-          necessitatibus nostrum unde iste earum quam, explicabo sunt asperiores
-          dolor deserunt minima! Fugit iste aperiam incidunt at voluptate
-          consequatur quidem repudiandae animi dolore itaque et, voluptates
-          commodi pariatur nemo praesentium magnam quia explicabo tempora, dolor
-          accusamus sapiente aliquam autem, reiciendis iure? Ducimus commodi
-          suscipit beatae perferendis quia ut nesciunt eius repudiandae quo
-          ratione quod laborum natus consequatur, pariatur voluptatibus quasi
-          illo ipsam facere in autem voluptatum reprehenderit odio possimus?
-          Eveniet, error dolorem. Quas sequi laborum odit! Molestiae, quasi
-          beatae. Quibusdam laboriosam iusto illo tempore id aliquam fugit
-          dignissimos repellat quam consequuntur beatae, ea perspiciatis
-          sapiente modi itaque animi, harum necessitatibus, ipsa excepturi a
-          quasi nulla ipsam. Laboriosam deserunt blanditiis minima aperiam, fuga
-          similique aliquam ut obcaecati a temporibus dolor voluptatum repellat
-          eos!
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis,
+          perferendis velit? Alias hic, necessitatibus reiciendis adipisci esse
+          est eveniet veritatis natus. Nam expedita nobis ullam magnam maxime
+          aut, modi natus. Iure fugit dolores, facere facilis velit quidem, eum
+          neque necessitatibus molestiae ab rerum qui adipisci vel nam illo
+          repudiandae ut consequuntur libero eaque rem dicta corporis amet
+          nostrum explicabo! Cumque earum voluptatum, autem exercitationem
+          corrupti praesentium blanditiis iusto voluptatem, vero maxime
+          dignissimos labore culpa odit molestiae nulla tempora, mollitia animi
+          voluptate. Omnis, a voluptate sequi aliquam, eveniet earum dignissimos
+          quibusdam, repudiandae sed optio iure exercitationem harum? Id rerum
+          laboriosam voluptate aperiam praesentium sunt exercitationem dicta vel
+          molestiae quasi natus velit optio, impedit ut dolorum voluptatibus
+          corrupti animi, quia ad. Ad illum non sunt sapiente nemo aliquam
+          quaerat rem aut voluptatum fuga laboriosam omnis facere, magnam vero
+          numquam ullam repellendus dolore commodi ipsum. Nostrum atque officiis
+          totam voluptatum, incidunt culpa! Magni ipsa tempore hic nulla
+          blanditiis, voluptatibus similique quam commodi sapiente dolorem id
+          magnam maiores harum corrupti suscipit architecto sunt nobis vero
+          error voluptatum? Voluptatem reiciendis hic numquam nemo incidunt
+          magni eaque veritatis doloremque modi sequi voluptates nostrum
+          aspernatur libero accusantium vitae, assumenda dolorum voluptate
+          debitis temporibus. Similique animi ex ad!
         </p>
         <button>Call To Action</button>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <span> </span>
+    </footer>
   </body>
 </html>
